--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             document.write("Hello World!")
         </script>
         <noscript>Your browser does not support JavaScript!</noscript>
+        <audio id="/HTMLCSS/VJ0/TheCannery.mp3" src="TheCannery.mp3"></audio>
+        <button onclick="document.getElementById('/HTMLCSS/VJ0/TheCannery.mp3').play()">Play!</button>
 
     </body>
 </html>
