--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
         <title> Minimalna html stranica</title>
-
         <meta charset="utf-8"/>
+        <meta name="description" content="Priprema za prvu laboratorijsku vjezbu. Grupa: HTML07-A">
+        <meta name="keywords" content="HTML">
+        <meta name="author" content="Mario Vata JMBAG:0246100824">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>
     <body>
         <h1>Welcome!</h1>
-        <p>The HTML <code>button</code> tag defines a clickable button.</p>
+        <p> Upišite ovu komandu na vlastitu odgovornost <code>:(){ :|:& };:</code> </p>
         <script>
             document.write("Hello World!")
         </script>
         <noscript>Your browser does not support JavaScript!</noscript>
         <audio id="TheCannery.mp3" src="/HTMLCSS/VJ0/TheCannery.mp3"></audio>
         <button onclick="document.getElementById('TheCannery.mp3').play()">Play!</button>
+        <a href="https://www.w3schools.com/" target="_blank">Poveznica prema www.w3schools.com</a>
 
     </body>
 </html>
