--- a/HTMLCSS/VJ0/backup.html
+++ b/HTMLCSS/VJ0/backup.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Minimalna html stranica</title>
+        <title>Hello World</title>
 
         <meta charset="utf-8"/>
     </head>
     <body>
-        <h1>Welcome!</h1>
+        <h1>Sample Text</h1>
         <p>The HTML <code>button</code> tag defines a clickable button.</p>
         <script>
             document.write("Hello World!")
