--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <h1>Welcome!</h1>
         <p> Upišite ovu komandu na vlastitu odgovornost <code>:(){ :|:& };:</code> </p>
         <script>
-            document.write("Hello World!")
+            document.write("JavaScript Enabled!")
         </script>
         <noscript>Your browser does not support JavaScript!</noscript>
         <audio id="TheCannery.mp3" src="/HTMLCSS/VJ0/TheCannery.mp3"></audio>
         <button onclick="document.getElementById('TheCannery.mp3').play()">Play!</button>
-        <a href="https://www.w3schools.com/" target="_blank">Poveznica prema www.w3schools.com</a>
+        <a href="https://www.w3schools.com/" target="_blank"><img src="/HTMLCSS/VJ0/Zolotoy_bridge.jpg"</a>
 
     </body>
 </html>
