--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
 		Kontakt
 	    </a>
 
+        <a href="/HTMLCSS/VJ0/backup.html">Relativna Poveznica</a>
+        <a href="https://www.google.com">Absolutna Poveznica</a>
+
     </body>
 </html>
