--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
         <button onclick="document.getElementById('TheCannery.mp3').play()">Play!</button>
         <a href="https://www.w3schools.com/" target="_blank"><img src="/HTMLCSS/VJ0/Zolotoy_bridge.jpg"</a>
 
-        <a href="mailto:mvata@tvz.hr?cc=mvata@tvz.hr&subject=Upit o online održavanju nastave">
-		Kontakt
-	    </a>
-
+        <a href="mailto:mvata@tvz.hr?cc=mvata@tvz.hr&subject=Upit o online održavanju nastave">Kontakt</a>
+        <p>
         <a href="/HTMLCSS/VJ0/backup.html">Relativna Poveznica</a>
         <a href="https://www.google.com">Absolutna Poveznica</a>
-
+        </p>
     </body>
 </html>
