--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
         <a href="https://www.w3schools.com/" target="_blank"><img src="/HTMLCSS/VJ0/Zolotoy_bridge.jpg"</a>
 
         <a href="mailto:mvata@tvz.hr?cc=mvata@tvz.hr&subject=Upit o online održavanju nastave">Kontakt</a>
+        
         <p>
         <a href="/HTMLCSS/VJ0/backup.html">Relativna Poveznica</a>
         <a href="https://www.google.com">Absolutna Poveznica</a>
         </p>
+
+        <p>
+        <a href="/HTMLCSS/VJ0/drzave/drzave.html">Drzave</a>
+        <a href="/HTMLCSS/VJ0/drzave/gradovi/gradovi.html">Gradovi</a>
+        <a href="#">poveznica</a>
+        </p>
+
     </body>
 </html>
