--- a/HTMLCSS/VJ0/drzave/gradovi/gradovi.html
+++ b/HTMLCSS/VJ0/drzave/gradovi/gradovi.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>
+        <a href="/../../../../index.html">Pocetna</a>
+        <a href="/gradovi/gradovi.html">Drzave</a>
+        <a href="#">poveznica</a>
+    </p>
 </body>
 </html>
