--- a/HTMLCSS/VJ0/drzave/gradovi/gradovi.html
+++ b/HTMLCSS/VJ0/drzave/gradovi/gradovi.html
@@ -9,7 +9,7 @@
 <body>
     <p>
         <a href="/../../../../index.html">Pocetna</a>
-        <a href="/gradovi/gradovi.html">Drzave</a>
+        <a href="/../gradovi/gradovi.html">Drzave</a>
         <a href="#">poveznica</a>
     </p>
 </body>
