--- a/HTMLCSS/VJ0/drzave/drzave.html
+++ b/HTMLCSS/VJ0/drzave/drzave.html
@@ -11,6 +11,10 @@
         <a href="/../../../index.html">Pocetna</a>
         <a href="/gradovi/gradovi.html">Gradovi</a>
         <a href="#">poveznica</a>
-        </p>
+    </p>
+
+    <p>
+        <img src="/grbovi/Coat_of_Arms_of_the_Russian_Federation.png"/>
+    </p>
 </body>
 </html>
