--- a/HTMLCSS/VJ0/drzave/drzave.html
+++ b/HTMLCSS/VJ0/drzave/drzave.html
@@ -14,7 +14,7 @@
     </p>
 
     <p>
-        <img src="/grbovi/Coat_of_Arms_of_the_Russian_Federation.png"/>
+        <img src="/../grbovi/Coat_of_Arms_of_the_Russian_Federation.png"/>
     </p>
 </body>
 </html>
