--- a/HTMLCSS/VJ0/drzave/drzave.html
+++ b/HTMLCSS/VJ0/drzave/drzave.html
@@ -9,12 +9,12 @@
 <body>
     <p>
         <a href="/../../../index.html">Pocetna</a>
-        <a href="/gradovi/gradovi.html">Gradovi</a>
+        <a href="/HTMLCSS/VJ0/drzave/gradovi/gradovi.html">Gradovi</a>
         <a href="#">poveznica</a>
     </p>
 
     <p>
-        <img src="/../grbovi/Coat_of_Arms_of_the_Russian_Federation.png"/>
+        <img src="/HTMLCSS/VJ0/drzave/grbovi/Coat_of_Arms_of_the_Russian_Federation.png"/>
     </p>
 </body>
 </html>
