--- a/HTMLCSS/VJ0/drzave/gradovi/gradovi.html
+++ b/HTMLCSS/VJ0/drzave/gradovi/gradovi.html
@@ -14,7 +14,7 @@
     </p>
 
     <p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/%D0%9A%D1%80%D0%B0%D1%81%D0%BD%D0%B0%D1%8F_%D0%BF%D0%BB%D0%BE%D1%89%D0%B0%D0%B4%D1%8C1.jpg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/%D0%9A%D1%80%D0%B0%D1%81%D0%BD%D0%B0%D1%8F_%D0%BF%D0%BB%D0%BE%D1%89%D0%B0%D0%B4%D1%8C1.jpg" width="720">
     </p>
 </body>
 </html>
