--- a/HTMLCSS/VJ0/drzave/drzave.html
+++ b/HTMLCSS/VJ0/drzave/drzave.html
@@ -18,7 +18,7 @@
     </p>
 
     <p>
-        <img src="/HTMLCSS/VJ0/drzave/grbovi/Coat_of_Arms_of_the_Russian_Federation.png"/>
+        <img src="/HTMLCSS/VJ0/drzave/grbovi/Coat_of_Arms_of_the_Russian_Federation.png" width="400"/>
     </p>
 
 </body>
