--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
         <noscript>Your browser does not support JavaScript!</noscript>
         <audio id="TheCannery.mp3" src="/HTMLCSS/VJ0/TheCannery.mp3"></audio>
         <button onclick="document.getElementById('TheCannery.mp3').play()">Play!</button>
-        
+
+        <q>“So many books, so little time.”</q>
+        <!--Ovo je komentar-->
+
+        <p>Radimo od <time>0:00</time> do <time>24:00</time>!</p>
+
         <p>
         <a href="https://www.w3schools.com/" target="_blank"><img src="/HTMLCSS/VJ0/Zolotoy_bridge.jpg"</a>
         </p>
