--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <!--Ovo je komentar-->
 
         <p>Radimo od <time>0:00</time> do <time>24:00</time>!</p>
+        <p><abbr title="National Aeronautics and Space Administration">NASA</abbr> ima 17,373 zaposlenika.</p>
 
         <p>
         <a href="https://www.w3schools.com/" target="_blank"><img src="/HTMLCSS/VJ0/Zolotoy_bridge.jpg"</a>
