--- a/HTMLCSS/VJ0/index.html
+++ b/HTMLCSS/VJ0/index.html
@@ -19,7 +19,7 @@
             document.write("JavaScript Enabled!")
         </script>
         <noscript>Your browser does not support JavaScript!</noscript>
-        <audio id="TheCannery.mp3" src="/TheCannery.mp3"></audio>
+        <audio id="TheCannery.mp3" src="TheCannery.mp3"></audio>
         <button onclick="document.getElementById('TheCannery.mp3').play()">Play!</button>
 
         <q>“So many books, so little time.”</q>
@@ -29,7 +29,7 @@
         <p><abbr title="National Aeronautics and Space Administration">NASA</abbr> ima 17,373 zaposlenika.</p>
 
         <p>
-        <a href="https://www.w3schools.com/" target="_blank"><img src="/Zolotoy_bridge.jpg"</a>
+        <a href="https://www.w3schools.com/" target="_blank"><img src="Zolotoy_bridge.jpg"</a>
         </p>
         
         <p>
@@ -42,8 +42,8 @@
         </p>
 
         <p>
-        <a href="/drzave/drzave.html">Drzave</a>
-        <a href="/drzave/gradovi/gradovi.html">Gradovi</a>
+        <a href="drzave/drzave.html">Drzave</a>
+        <a href="drzave/gradovi/gradovi.html">Gradovi</a>
         <a href="#">poveznica</a>
         </p>
 
