--- a/HTMLCSS/VJ0/drzave/drzave.html
+++ b/HTMLCSS/VJ0/drzave/drzave.html
@@ -12,7 +12,7 @@
 <body>
     
     <p>
-        <a href="/../../index.html">Pocetna</a>
+        <a href="/../index.html">Pocetna</a>
         <a href="/HTMLCSS/VJ0/drzave/gradovi/gradovi.html">Gradovi</a>
         <a href="#">poveznica</a>
     </p>
