--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 
     </head>
     <body>
-        <h1>TVZ - HTML&CSS</h1>
+        <h1>TVZ</h1>
         
         <p>
-        <a href="/HTMLCSS/VJ0/index.html">Priprema_1</a>
+            <a href="htmlcss.html">HTML CSS</a>
         </p>
 
-
+        <p>
+            <a href="python.html">Python</a>
+        </p>
+        
     </body>
 </html>
