--- a/HTMLCSS/VJ1/index.html
+++ b/HTMLCSS/VJ1/index.html
@@ -25,7 +25,7 @@
     <a name="meduza"></a>
     <h2>Meduza</h2>
     <img src="slike/1.jpg" alt="Meduza" width="250">
-    <p></p>
+    <p>Lacking brains, blood, or even hearts, jellyfish are pretty simple critters. They are composed of three layers: an outer layer, called the epidermis; a middle layer made of a thick, elastic, jelly-like substance called mesoglea; and an inner layer, called the gastrodermis</p>
     <iframe src="https://oceanservice.noaa.gov/facts/jellyfish.html" title="What are jellyfish made of?"></iframe> 
     
     <br/><br/><br/><br/><br/><br/><br/>
@@ -33,7 +33,7 @@
     <a name="mis"></a>
     <h2>Miš</h2>
     <img src="slike/2.jpg" alt="Miš" width="250">
-    <p></p>
+    <p>A mouse, plural mice, is a small mammal. Characteristically, mice are known to have a pointed snout, small rounded ears, a body-length scaly tail, and a high breeding rate.</p>
     <iframe src="https://www.fancymice.info/" title="extensive information about breeding mice and keeping them as pets"></iframe>
 
     <br/><br/><br/><br/><br/><br/><br/>
@@ -41,7 +41,7 @@
     <a name="majmun"></a>
     <h2>Majmun</h2>
     <img src="slike/3.jpg" alt="Majmun" width="250">
-    <p></p>
+    <p>Monkeys needs a large amount of social interaction. A pet monkey deprived of your time and attention will likely develop not only severe behavioral problems, such as screaming and biting, but also psychological issues that can be difficult to remedy. </p>
     <iframe src="https://www.thesprucepets.com/problems-with-pet-monkeys-1237180" title="Problems With Keeping a Pet Monkey"></iframe>
 
     <br/><br/><br/><br/><br/><br/><br/>
@@ -49,7 +49,7 @@
     <a name="magarac"></a>
     <h2>Magarac</h2>
     <img src="slike/4.jpg" alt="Magarac" width="250">
-    <p></p>
+    <p>There are three main types of donkeys: wild, feral and domesticated. Wild donkeys typically grow to around 49 inches (125 centimeters) from hoof to shoulder and weight around 551 lbs. </p>
     <iframe src="https://www.livescience.com/54258-donkeys.html" title="Facts About Donkeys"></iframe>
 
     <br/><br/><br/><br/><br/><br/><br/>
@@ -57,7 +57,7 @@
     <a name="medvjed"></a>
     <h2>Medvjed</h2>
     <img src="slike/5.jpg" alt="Medvjed" width="250">
-    <p></p>
+    <p>Bears are mammals that belong to the family Ursidae. They can be as small as four feet long and about 60 pounds (the sun bear) to as big as eight feet long and more than a thousand pounds (the polar bear). </p>
     <iframe src="https://www.nationalgeographic.com/animals/mammals/facts/bears-grizzly-polar-panda" title="Facts About Bears"></iframe>
 
     <br/><br/><br/><br/><br/><br/><br/>
