--- a/HTMLCSS/VJ1/index.html
+++ b/HTMLCSS/VJ1/index.html
@@ -26,7 +26,7 @@
     <h2>Meduza</h2>
     <img src="slike/1.jpg"  title="Slika meduze" alt="Meduza" width="250">
     <p>Lacking brains, blood, or even hearts, jellyfish are pretty simple critters. They are composed of three layers: an outer layer, called the epidermis; a middle layer made of a thick, elastic, jelly-like substance called mesoglea; and an inner layer, called the gastrodermis</p>
-    <iframe src="https://oceanservice.noaa.gov/facts/jellyfish.html" title="What are jellyfish made of?" width="600"></iframe> 
+    <iframe src="https://oceanservice.noaa.gov/facts/jellyfish.html" title="What are jellyfish made of?" width="600" height="300"></iframe> 
     
     <br/><br/><br/><br/><br/><br/><br/>
 
@@ -34,7 +34,7 @@
     <h2>Miš</h2>
     <img src="slike/2.jpg"  title="Slika misa" alt="Miš" width="250">
     <p>A mouse, plural mice, is a small mammal. Characteristically, mice are known to have a pointed snout, small rounded ears, a body-length scaly tail, and a high breeding rate.</p>
-    <iframe src="https://www.fancymice.info/" title="extensive information about breeding mice and keeping them as pets" width="600"></iframe>
+    <iframe src="https://www.fancymice.info/" title="extensive information about breeding mice and keeping them as pets" width="600" height="300"></iframe>
 
     <br/><br/><br/><br/><br/><br/><br/>
 
@@ -42,7 +42,7 @@
     <h2>Majmun</h2>
     <img src="slike/3.jpg"  title="Slika majmuna" alt="Majmun" width="250">
     <p>Monkeys needs a large amount of social interaction. A pet monkey deprived of your time and attention will likely develop not only severe behavioral problems, such as screaming and biting, but also psychological issues that can be difficult to remedy. </p>
-    <iframe src="https://www.thesprucepets.com/problems-with-pet-monkeys-1237180" title="Problems With Keeping a Pet Monkey" width="600"></iframe>
+    <iframe src="https://www.thesprucepets.com/problems-with-pet-monkeys-1237180" title="Problems With Keeping a Pet Monkey" width="600" height="300"></iframe>
 
     <br/><br/><br/><br/><br/><br/><br/>
 
@@ -50,7 +50,7 @@
     <h2>Magarac</h2>
     <img src="slike/4.jpg"  title="Slika magarca" alt="Magarac" width="250">
     <p>There are three main types of donkeys: wild, feral and domesticated. Wild donkeys typically grow to around 49 inches (125 centimeters) from hoof to shoulder and weight around 551 lbs. </p>
-    <iframe src="https://www.livescience.com/54258-donkeys.html" title="Facts About Donkeys" width="600"></iframe>
+    <iframe src="https://www.livescience.com/54258-donkeys.html" title="Facts About Donkeys" width="600" height="300"></iframe>
 
     <br/><br/><br/><br/><br/><br/><br/>
 
@@ -58,7 +58,7 @@
     <h2>Medvjed</h2>
     <img src="slike/5.jpg"  title="Slika medvjeda" alt="Medvjed" width="250">
     <p>Bears are mammals that belong to the family Ursidae. They can be as small as four feet long and about 60 pounds (the sun bear) to as big as eight feet long and more than a thousand pounds (the polar bear). </p>
-    <iframe src="https://www.nationalgeographic.com/animals/mammals/facts/bears-grizzly-polar-panda" title="Facts About Bears" width="600"></iframe>
+    <iframe src="https://www.nationalgeographic.com/animals/mammals/facts/bears-grizzly-polar-panda" title="Facts About Bears" width="600" height="300"></iframe>
 
     <br/><br/><br/><br/><br/><br/><br/>
 
@@ -66,7 +66,7 @@
     <h2>Morski pas</h2>
     <img src="slike/6.jpg"  title="Slika morskog psa" alt="Morski pas" width="250">
     <p>Every shark belongs to the classification Chondrichthyes which identifies them as cartilaginous fish, fish whose internal skeletons are comprised of flexible cartilage rather than bone. </p>
-    <iframe src="https://www.sharks.org/species" title="Shark Species — Shark Research Institute" width="600"></iframe>
+    <iframe src="https://www.sharks.org/species" title="Shark Species — Shark Research Institute" width="600" height="300"></iframe>
 
     <br/>
     <a href="#vrh">[idi na vrh]</a>
