--- a/HTMLCSS/VJ3/index.html
+++ b/HTMLCSS/VJ3/index.html
@@ -145,7 +145,7 @@
 			<p role="contentinfo">By <a href="http://www.mezzoblue.com/">Dave Shea</a>. Bandwidth graciously donated by <a href="http://www.mediatemple.net/">mediatemple</a>. Now available: <a href="http://www.amazon.com/exec/obidos/ASIN/0321303474/mezzoblue-20/">Zen Garden, the book</a>.</p>
 		</div>
 
-		<div class="tablica" id="zen-tablica" role="article">
+		<div class="tablica" id="zen-tablica" role="article" style="margin-top: 1000px;">
 			<form> 
 				<table border="0" width="15%" height="15%" title="2020" cellspacing="2px" style="background-color: rgb(0, 10, 143); color: red;" >
 					<thead width="100">
