--- a/htmlcss.html
+++ b/htmlcss.html
@@ -29,6 +29,11 @@
         <a href="/HTMLCSS/VJ4/index.html">Priprema_4</a>
     </p>
 
+    <br><br><br>
+
+    <p>
+        <a href="/HTMLCSS/Seminarski/index.html">Seminarski</a>
+    </p>
 
 </body>
 </html>
