--- a/HTMLCSS/Seminarski/index.html
+++ b/HTMLCSS/Seminarski/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Astronomija - WIP</title>
+    <link rel="stylesheet" media="screen" href="style.css">
+    <title>Laws of the stars</title>
 </head>
-<body>
+<body id="main">
+    <div>
+        <header id="header">
+			<h1 class="title"><span>Laws of the stars</span></h1>
+		</header>
+    </div>
+
     
+    <div class="navigation">
+        <ul class="nav-list">
+        <li class="menu-item menu-item-home">
+        <a class="home" href="#">
+        <img src="slike/home.png" width="50px">
+        </a>
+        </li>
+        <li class="menu-item menu-item-about
+        ">
+        <a href="about/about.hmtl">
+        <span>About</span>
+        </a>
+        </li>
+        <li class="menu-item menu-item-contact
+        ">
+        <a href="Contact/Contact.html">
+        <span>Contact</span>
+        </a>
+        </li>
+    </div>
 </body>
 </html>
