--- a/htmlcss.html
+++ b/htmlcss.html
@@ -29,6 +29,14 @@
         <a href="/HTMLCSS/VJ4/index.html">Priprema_4</a>
     </p>
 
+    <p>
+        <a href="/HTMLCSS/VJ5/index.html">Priprema_5</a>
+    </p>
+
+    <p>
+        <a href="/HTMLCSS/VJ6/index.html">Priprema_6</a>
+    </p>
+
     <br><br><br>
 
     <p>
