--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <h1>TVZ</h1>
         
         <p>
-            <a href="htmlcss.html">HTML CSS</a>
+            <a href="www/htmlcss.html">HTML CSS</a>
         </p>
-
+        <!--
         <p>
             <a href="python.html">Python</a>
         </p>
-        
+        -->
     </body>
 </html>
