--- a/www/htmlcss.html
+++ b/www/htmlcss.html
@@ -43,5 +43,11 @@
         <a href="/www/HTMLCSS/Seminarski/index.html">Seminarski</a>
     </p>
 
+    <br><br><br>
+
+    <p>
+        <a href="/www/HTMLCSS/priprema_za_kolok/zad1/index.html">priprema_za_kolok_1</a>
+    </p>
+    
 </body>
 </html>
