--- a/www/htmlcss.html
+++ b/www/htmlcss.html
@@ -48,6 +48,14 @@
     <p>
         <a href="/www/HTMLCSS/Priprema_za_kolok/zad1/index.html">priprema_za_kolok_1</a>
     </p>
+
+    <p>
+        <a href="/www/HTMLCSS/Priprema_za_kolok/zad2/index.html">priprema_za_kolok_2</a>
+    </p>
+
+    <p>
+        <a href="/www/HTMLCSS/Priprema_za_kolok/zad3/index.html">priprema_za_kolok_3</a>
+    </p>
     
 </body>
 </html>
