--- a/www/HTMLCSS/Priprema_za_kolok/zad3/index.html
+++ b/www/HTMLCSS/Priprema_za_kolok/zad3/index.html
@@ -15,45 +15,46 @@
         <a href="#">Download Form</a>
     </header>
     <form>
+    <fieldset>
     <div id=cont>
         <div class=box>
             <div class="up-t">
                 <p>Lorem ipsum:</p>
             </div>
-            <p>Input One:</p> <input type="text" id="a"><br>
+            <p>Input One:</p> <input type="text" name=1 id="a"><br>
             <div id=barrier ></div>
-            <p>Input Two:</p> <input type="text" id="b">
+            <p>Input Two:</p> <input type="text" name=1 id="b">
         </div>
 
         <div class="box">
             <div class="up-t">
                 <p>Lorem ipsum:</p>
             </div>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=2>Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=2>Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=2>Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=2>Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=2>Lorem ipsum dolor sit amet.</label>
         </div>
         <div class="box">
             <div class="up-t">
                 <p>Lorem ipsum:</p>
             </div>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=3>Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=3>Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=3>Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=3>Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=3>Lorem ipsum dolor sit amet.</label>
         </div>
         <div class="box">
             <div class="up-t">
                 <p>Lorem ipsum:</p>
             </div>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
-            <label><input type="checkbox">Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=4>Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=4>Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=4>Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=4>Lorem ipsum dolor sit amet.</label>
+            <label><input type="checkbox" name=4>Lorem ipsum dolor sit amet.</label>
         </div>
 
         <div class="box">
@@ -68,7 +69,7 @@
             <input type="submit" name="ok" value="Submit"/>
         </div>
     </div>
-
+    </fieldset>
     </form>
 </body>
 </html>
