--- a/www/htmlcss.html
+++ b/www/htmlcss.html
@@ -56,6 +56,10 @@
     <p>
         <a href="/www/HTMLCSS/Priprema_za_kolok/zad3/index.html">priprema_za_kolok_3</a>
     </p>
+
+    <p>
+        <a href="/www/HTMLCSS/Priprema_za_kolok/zad3/index.html">priprema_za_kolok_4</a>
+    </p>
     
 </body>
 </html>
