--- a/www/HTMLCSS/Seminarski/contact/contact.html
+++ b/www/HTMLCSS/Seminarski/contact/contact.html
@@ -59,16 +59,22 @@
     <div class="content">
         <div class="row">
             <div class="col-12">
-                <div class="conbox">
-        <form>
-          <p>Get in Contact</p>
-          <input placeholder="Email" type="email">
-          <input placeholder="Subject" type="text">
-          <textarea placeholder="Message" rows="4"></textarea>
-          <input placeholder="Send" type="submit">
-        </form>
-        </div>
-    
+                <div class="conbox contact">
+                        <img class=cont_ico src="../slike/Quasar_Server.png">
+                        <img class=cont_ico2 src="../slike/Quasar_Server.png">                    
+                        <form>
+                            <p>Contact</p>
+                            <input class=contact_1 placeholder="Email" type="email">
+                            <input class=contact_1 placeholder="Subject" type="text">
+                            <textarea class=contact_1 placeholder="Message" rows="4"></textarea>
+                            <input class=contact_1 placeholder="Send" type="submit" value="Send">                     
+                        </form>
+                        <hr>
+                        <a href="https://www.instagram.com/mariovata331/" class="fa fa-instagram footer-links"></a>
+                        <a href="https://www.github.com/mariovata/" class="fa fa-github footer-links"></a>
+                        <a href="https://www.linkedin.com/in/mario-vata/" class="fa fa-linkedin footer-links"></a>
+                        <a href="mailto:mvata@tvz.hr?subject=Pozdrav&body=">mvata@tvz.hr</a> 
+                    </div>
                 </div>
             </div>
         </div>
