--- a/www/HTMLCSS/Seminarski/index.html
+++ b/www/HTMLCSS/Seminarski/index.html
@@ -24,6 +24,9 @@
     <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <title>Laws of the stars</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap');
+    </style> 
 </head>
 <body id="main">
     
@@ -116,7 +119,7 @@
                 <h3>Terraforming</h3>
                 <p>Terraforming or terraformation (literally, "Earth-shaping") is the hypothetical process of deliberately modifying the atmosphere, temperature, surface topography or ecology of a planet, moon, or other body to be similar to the environment of Earth to make it habitable by Earth-like life.
 
-                    The concept of terraforming developed from both science fiction and actual science. Carl Sagan, an astronomer, proposed the planetary engineering of Venus in 1961, which is considered one of the first accounts of the concept. The term was coined by Jack Williamson in a science-fiction short story ("Collision Orbit") published in 1942 in Astounding Science Fiction,[2] although terraforming in popular culture may predate this work.</p>
+                    The concept of terraforming developed from both science fiction and actual science. Carl Sagan, an astronomer, proposed the planetary engineering of Venus in 1961, which is considered one of the first accounts of the concept. The term was coined by Jack Williamson in a science-fiction short story ("Collision Orbit") published in 1942 in Astounding Science Fiction, although terraforming in popular culture may predate this work.</p>
                 <hr>
                 <div class="cent">
                 <img class="img2" src="slike/4.jpg" width="800px" height="400px">
