--- a/www/HTMLCSS/Seminarski/about/about.html
+++ b/www/HTMLCSS/Seminarski/about/about.html
@@ -59,10 +59,10 @@
     
     <div class="content">
     <aside>
-        <img src="../slike/1.jpg" id="sidebar">
-        <img src="../slike/1.jpg" id="sidebar">
-        <img src="../slike/1.jpg" id="sidebar">
-        <img src="../slike/1.jpg" id="sidebar">
+        <img src="../slike/13.jpg" id="sidebar" width="100px" height="200px" style="border-radius: 15px;" >
+        <img src="../slike/10.jpg" id="sidebar"width="100px" height="200px" style="border-radius: 15px;">
+        <img src="../slike/11.jpg" id="sidebar"width="100px" height="200px" style="border-radius: 15px;">
+        <img src="../slike/12.jpg" id="sidebar"width="100px" height="200px" style="border-radius: 15px;">
         
     </aside>
 
