--- a/www/HTMLCSS/Seminarski/contact/contact-hr.html
+++ b/www/HTMLCSS/Seminarski/contact/contact-hr.html
@@ -31,7 +31,7 @@
         <div>
             <header id="header">
                 <h1 class="title"><span>Laws of the stars</span></h1>
-                <a href="contact-hr.html" class=switch>HR/EN</a>
+                <a href="contact.html" class=switch>HR/EN</a>
             </header>
         </div>
 
@@ -39,18 +39,18 @@
         <div class="navigation">
                 <ul class="nav-list">
                     <li class="menu-item menu-item-home">
-                    <a class="home" href="../index.html">
+                    <a class="home" href="../index-hr.html">
                     <img src="../slike/home.png" width="40px"></a>
                     </li>
                     <li class="menu-item menu-item-about
                     ">
-                    <a href="../about/about.html">
-                    <span>About</span></a>
+                    <a href="../about/about-hr.html">
+                    <span>O nama</span></a>
                     </li>
                     <li class="menu-item menu-item-contact
                     ">
                     <a href="#">
-                    <span>Contact</span></a>
+                    <span>Kontakt</span></a>
                     </li>
                 </ul>
             </div>
@@ -66,9 +66,9 @@
                         <form>
                             <p>Contact</p>
                             <input class=contact_1 placeholder="Email" type="email">
-                            <input class=contact_1 placeholder="Subject" type="text">
-                            <textarea class=contact_1 placeholder="Message" rows="4"></textarea>
-                            <input class=contact_1 placeholder="Send" type="submit" value="Send">                     
+                            <input class=contact_1 placeholder="Tema" type="text">
+                            <textarea class=contact_1 placeholder="Poruka" rows="4"></textarea>
+                            <input class=contact_1 placeholder="Send" type="submit" value="Pošalji">                     
                         </form>
                         <hr>
                         <a href="https://www.instagram.com/mariovata331/" class="fa fa-instagram footer-links"></a>
@@ -83,7 +83,7 @@
 
     <footer id=main-footer>
         <p id="footer-info">
-        Designed by Mario Vata JMBAG: 0246100824
+        Dizajnirao Mario Vata JMBAG: 0246100824
         
         
         <!-- <a href="https://www.github.com/mariovata/" class="fa fa-github">
