--- a/www/HTMLCSS/Seminarski/contact/contact-hr.html
+++ b/www/HTMLCSS/Seminarski/contact/contact-hr.html
@@ -64,7 +64,7 @@
                         <img class=cont_ico src="../slike/Quasar_Server.png">
                         <img class=cont_ico2 src="../slike/Quasar_Server.png">                    
                         <form>
-                            <p>Contact</p>
+                            <p>Kontakt</p>
                             <input class=contact_1 placeholder="Email" type="email">
                             <input class=contact_1 placeholder="Tema" type="text">
                             <textarea class=contact_1 placeholder="Poruka" rows="4"></textarea>
