--- a/www/HTMLCSS/Seminarski/contact/contact.html
+++ b/www/HTMLCSS/Seminarski/contact/contact.html
@@ -65,9 +65,9 @@
                         <img class=cont_ico2 src="../slike/Quasar_Server.png">                    
                         <form>
                             <p>Contact</p>
-                            <input class=contact_1 placeholder="Email" type="email">
-                            <input class=contact_1 placeholder="Subject" type="text">
-                            <textarea class=contact_1 placeholder="Message" rows="4"></textarea>
+                            <input class=contact_1 placeholder="Email" type="email" name=mail>
+                            <input class=contact_1 placeholder="Subject" type="text"name=subject>
+                            <textarea class=contact_1 placeholder="Message" rows="4" name=text></textarea>
                             <input class=contact_1 placeholder="Send" type="submit" value="Send">                     
                         </form>
                         <hr>
