--- a/www/HTMLCSS/Seminarski/about/about.html
+++ b/www/HTMLCSS/Seminarski/about/about.html
@@ -57,6 +57,10 @@
         </div>
     
     <div id=spacer></div>
+
+    <div id=q>
+        <img src="../slike/q.png" width="50px" height="50px">
+    </div>
     
     <div class="content">
     <aside>
