--- a/www/HTMLCSS/Seminarski/about/about-hr.html
+++ b/www/HTMLCSS/Seminarski/about/about-hr.html
@@ -68,7 +68,7 @@
         <img src="../slike/10.jpg" id="sidebar"width="100px" height="200px" style="border-radius: 15px;">
         <img src="../slike/11.jpg" id="sidebar"width="100px" height="200px" style="border-radius: 15px;">
         <img src="../slike/12.jpg" id="sidebar"width="100px" height="200px" style="border-radius: 15px;">
-        
+        <iframe width="100px" height="200px" id=sidebar style="border: radius 15px;" src="https://www.youtube.com/embed/AwwIFcdUFrE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </aside>
 
     <article>
