FIX: Contact pages leads to news insted of shop

--- a/www/HTMLCSS/Seminarski/contact/contact.html
+++ b/www/HTMLCSS/Seminarski/contact/contact.html
@@ -83,7 +83,7 @@
                       <a class="nav-link" href="../about/about.html">About</a>
                       <a class="nav-link" href="#">Contact</a>
                       <a class="nav-link" href="../news/news.html">News</a>
-                      <a class="nav-link" href="../news/news.html">Shop</a>
+                      <a class="nav-link" href="../shop/shop.html">Shop</a>
                     </div>
                   </div>
                 </div>
