Added store page and finished task 2 v0.8

--- a/www/HTMLCSS/Seminarski/contact/contact.html
+++ b/www/HTMLCSS/Seminarski/contact/contact.html
@@ -100,7 +100,7 @@
                         <img class=cont_ico2 src="../slike/Quasar_Server.png">
                                             
                         <form>
-                            <p>Contact</p>
+                            <h3 class="font-google2">Contact</h3>
                             <input class=contact_1 placeholder="Email" type="email" name=mail>
                             <input class=contact_1 placeholder="Subject" type="text"name=subject>
                             <textarea class=contact_1 placeholder="Message" rows="4" name=text></textarea>
