--- a/www/HTMLCSS/Seminarski/shop/shop.html
+++ b/www/HTMLCSS/Seminarski/shop/shop.html
@@ -93,6 +93,163 @@
     
     <div id=spacer></div>
 
+    <div class="container">
+
+        <div class="d-flex justify-content-center align-items-center flexban">
+            <div class="banner1">
+                Items On SALE! Receive a free mug with purchases over $400!
+            </div>
+            
+        </div>
+
+
+        <div class="d-flex flex-wrap justify-content-center">
+            <!-- SHOP ITEM 1# -->
+            <div class="flexcon">
+                <h3 class="p-2 text-center font-google2">Saxon 1026AZ3 SC Refractor Telescope </h3>
+                <div class="d-flex justify-content-center">
+                <img src="../slike/s1.jpg" width="400px" height="225px">
+                </div>
+                <hr>
+                <div class="d-flex justify-content-between">
+                <h3 class="p-2">Price: <span class="strike">499.99$</span> <span class="bprice">299.99$</span></h3>
+                <button class="m-2 btn btn-outline-secondary">Add to cart</button>
+                </div>
+                <hr>
+                <p class="p-4">TWO-YEAR warranty. And technical support from our team of experts in 24 hours features Quality Optics: 400mm(f/5.7) focal length and 70mm aperture</p>
+            </div>
+
+            <div class="flexcon">
+                <h3 class="p-2 text-center font-google2">Gregorian-reflecting-telescope</h3>
+                <div class="d-flex justify-content-center">
+                <img src="../slike/s2.jpg" width="400px" height="225px">
+                </div>
+                <hr>
+                <div class="d-flex justify-content-between">
+                <h3 class="p-2">Price: 2299.99$</h3>
+                <button class="m-2 btn btn-outline-secondary">Add to cart</button>
+                </div>
+                <hr>
+                <p class="p-4">With this telescope, you can finally fulfil your dreams of becoming an ancient astronomer (I'm not even sure if this telescope works). DISCLAIMER: This item has no warranty!</p>
+            </div>
+
+            <div class="flexcon">
+                <h3 class="p-2 text-center font-google2">World’s largest optical telescope</h3>
+                <div class="d-flex justify-content-center">
+                <img src="../slike/s3.jpg" width="400px" height="225px">
+                </div>
+                <hr>
+                <div class="d-flex justify-content-between">
+                <h3 class="p-2">Price: 16.2 million $</h3>
+                <button class="m-2 btn btn-outline-secondary">Add to cart</button>
+                </div>
+                <hr>
+                <p class="p-4">Have you ever wanted to own the World’s largest optical telescope? Well now you can! For the small price of 16.2 million dollars this telescope is yours! If the item does not ship we offer no refunds. </p>
+            </div>
+
+            <div class="flexcon">
+                <h3 class="p-2 text-center font-google2">Tiny1 Astronomy Camera</h3>
+                <div class="d-flex justify-content-center">
+                <img src="../slike/s4.jpg" width="400px" height="225px">
+                </div>
+                <hr>
+                <div class="d-flex justify-content-between">
+                <h3 class="p-2">Price: 399.00$</h3>
+                <button class="m-2 btn btn-outline-secondary">Add to cart</button>
+                </div>
+                <hr>
+                <p class="p-4">The Tiny1 is a compact camera designed to take pictures and videos of the night sky. It has a backside illuminated 4MP CMOS sensor, a removable IR-cut filter and proprietary noise reduction. It can also be used as a normal point-and-shoot and has optional lens adapters.</p>
+            </div>
+
+            <div class="flexcon">
+                <h3 class="p-2 text-center font-google2">Meade Maksutov telescope</h3>
+                <div class="d-flex justify-content-center">
+                <img src="../slike/s5.jpg" width="400px" height="225px">
+                </div>
+                <hr>
+                <div class="d-flex justify-content-between">
+                <h3 class="p-2">Price: <span class="strike">1299.99$</span><span class="bprice">799.99$</span></h3>
+                <button class="m-2 btn btn-outline-secondary">Add to cart</button>
+                </div>
+                <hr>
+                <p class="p-4">
+
+                    The LX65 series combines advanced features with world-class optics in an easy-to-use telescope.</p>
+            </div>
+
+            <div class="flexcon">
+                <h3 class="p-2 text-center font-google2">Space Pillow</h3>
+                <div class="d-flex justify-content-center">
+                <img src="../slike/s6.jpg" width="400px" height="225px">
+                </div>
+                <hr>
+                <div class="d-flex justify-content-between">
+                <h3 class="p-2">Price: 34.99$</h3>
+                <button class="m-2 btn btn-outline-secondary">Add to cart</button>
+                </div>
+                <hr>
+                <p class="p-4">Unlike a memory foam pillow, our side sleeper pillow is designed to make life as easy as counting sheep! Simply pop them in the washer and tumble dry.</p>
+            </div>
+
+            <div class="flexcon">
+                <h3 class="p-2 text-center font-google2">Moon Rock Gel</h3>
+                <div class="d-flex justify-content-center">
+                <img src="../slike/s11.jpg" width="400px" height="225px">
+                </div>
+                <hr>
+                <div class="d-flex justify-content-between">
+                <h3 class="p-2">Price: 6.99$</h3>
+                <button class="m-2 btn btn-outline-secondary">Add to cart</button>
+                </div>
+                <hr>
+                <p class="p-4">The bean counters told me we literally could not afford to buy seven dollars worth of moon rocks, much less seventy million. Bought 'em anyway. Ground 'em up, mixed em into a gel</p>
+            </div>
+
+            <div class="flexcon">
+                <h3 class="p-2 text-center font-google2">Space Pen</h3>
+                <div class="d-flex justify-content-center">
+                <img src="../slike/s8.jpg" width="400px" height="225px">
+                </div>
+                <hr>
+                <div class="d-flex justify-content-between">
+                <h3 class="p-2">Price: <span class="strike">49.99$</span><span class="bprice">39.99$</span></h3>
+                <button class="m-2 btn btn-outline-secondary">Add to cart</button>
+                </div>
+                <hr>
+                <p class="p-4">The Space Pen (also known as the Zero Gravity Pen), marketed by Fisher Space Pen Company, is a pen that uses pressurized ink cartridges and is able to write in zero gravity, underwater, over wet and greasy paper, at any angle, and in a very wide range of temperatures</p>
+            </div>
+
+            <div class="flexcon">
+                <h3 class="p-2 text-center font-google2">Solar System Poster</h3>
+                <div class="d-flex justify-content-center">
+                <img src="../slike/s9.jpg" width="400px" height="225px">
+                </div>
+                <hr>
+                <div class="d-flex justify-content-between">
+                <h3 class="p-2">Price: 19.99$</h3>
+                <button class="m-2 btn btn-outline-secondary">Add to cart</button>
+                </div>
+                <hr>
+                <p class="p-4"> Ideal for any space decoration designs, like living room, bedroom, movie club, dorm etc.. Also a perfect gift to your family, relatives, friends or colleagues</p>
+            </div>
+
+            <div class="flexcon">
+                <h3 class="p-2 text-center font-google2">Kinetic Orbital Newton Cradle</h3>
+                <div class="d-flex justify-content-center">
+                <img src="../slike/s10.jpg" width="400px" height="225px">
+                </div>
+                <hr>
+                <div class="d-flex justify-content-between">
+                <h3 class="p-2">Price: <span class="strike">29.99$</span><span class="bprice">24.99$</span></h3>
+                <button class="m-2 btn btn-outline-secondary">Add to cart</button>
+                </div>
+                <hr>
+                <p class="p-4">This is the perfect desk toy to impress Colleagues and clients alike! The Cosmos Perpetual Motion Desktop Toy is perfect for your outer space themed office or room decor.</p>
+            </div>
+
+        </div>
+    </div>
+
 
 
     <footer id=main-footer>
