Added: Priprema 7,8,9 HTML & Python 10

--- a/www/htmlcss.html
+++ b/www/htmlcss.html
@@ -37,6 +37,19 @@
         <a href="/www/HTMLCSS/VJ6/index.html">Priprema_6</a>
     </p>
 
+    <p>
+        <a href="/www/HTMLCSS/VJ7/index.html">Priprema_7</a>
+    </p>
+
+    <p>
+        <a href="/www/HTMLCSS/VJ8/index.html">Priprema_8</a>
+    </p>
+
+    <p>
+        <a href="/www/HTMLCSS/VJ9/index.html">Priprema_9</a>
+    </p>
+
+
     <br><br><br>
 
     <p>
