Add: Mobile Version

--- a/www/HTMLCSS/VJ9/index.html
+++ b/www/HTMLCSS/VJ9/index.html
@@ -13,7 +13,7 @@
     <!-- NAVIGACIJA -->
 
     <div>
-        <nav>
+        <nav class="cont">
             <ul class="nav">
                 <li class=link href="#">LINK1</li>
                 <li class=link href="#">LINK2</li>
@@ -37,9 +37,11 @@
         </div>
     </section>
 
+    <div class="flex">
+
     <section>
         <div class="cont">
-            <div class="content1">
+            <div class="content1 mobi">
                 <div class="bg">
                     <h3>Fish</h3>
                     <p>Founders alpha direct mailing first mover
@@ -121,6 +123,6 @@
         </div>
     </div>
     </section>
-    
+</div>
 </body>
 </html>
