Add: Mobile version for Exam prep 2

--- a/www/HTMLCSS/Priprema_za_kolok/zad5/index.html
+++ b/www/HTMLCSS/Priprema_za_kolok/zad5/index.html
@@ -73,15 +73,15 @@
         <div>
             <h2 class="text-center">Services</h2>
             
-            <div class="d-flex justify-content-evenly flex-row">
-                <div class="item1 d-flex flex-column">
+            <div class="row">
+                <div class="col-md-3 mb-5 d-flex flex-column">
                     <h3>Articles</h3>
                     <img class="imgfix" src="img/feat3.jpg">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus pariatur adipisci natus architecto enim aliquid laborum eveniet blanditiis hic? Odio a error modi rem eum delectus nemo eaque recusandae nulla?</p>
                     <button class="btn btn-primary align-self-end">More</button>
                 </div>
 
-                <div class="item1 d-flex flex-column">
+                <div class="col-md-3 mb-5 d-flex flex-column">
                     <h3>Articles</h3>
                     <ul>
                         <li>Lorem, ipsum.</li>
@@ -114,7 +114,7 @@
                     <button class="btn btn-primary align-self-end">More</button>
                 </div>
 
-                <div class="item1 d-flex flex-column">
+                <div class="col-md-3 mb-5 d-flex flex-column">
                     <h3>Articles</h3>
                     <ul>
                         <li>Lorem, ipsum.</li>
@@ -146,7 +146,7 @@
                     
                     <button class="btn btn-primary align-self-end">More</button>
                 </div>
-                <div class="item1 d-flex flex-column">
+                <div class="col-md-3 mb-5 d-flex flex-column">
                     <h3>Articles</h3>
                     <ul>
                         <li>Lorem, ipsum.</li>
