--- a/www/htmlcss.html
+++ b/www/htmlcss.html
@@ -73,6 +73,10 @@
     <p>
         <a href="/www/HTMLCSS/Priprema_za_kolok/zad4/index.html">priprema_za_kolok_4</a>
     </p>
+
+    <p>
+        <a href="/www/HTMLCSS/proj/index.html">Projekt</a>
+    </p>
     
 </body>
 </html>
